<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NoInternet">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/no_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="120dp"/>

    <TextView
        android:id="@+id/wentWrongTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_went_wrong"
        android:textColor="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/TvAlien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_alien"
        android:textColor="#929292"
        app:layout_constraintTop_toBottomOf="@id/wentWrongTV"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/Retry"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:text="@string/retry"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/TvAlien"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>